cc_binary(
    name="std_filesystem",
    srcs = ["std_filesystem/main.cc"],
    copts = ["-std=c++20"],
)

cc_binary(
    name="structured_binding",
    srcs = ["structured_binding/main.cc"],
    copts = ["-std=c++20"],
)

cc_binary(
    name="std_variant",
    srcs = ["std_variant/main.cc"],
    copts = ["-std=c++20"],
)

cc_binary(
    name="x86_64_memmove",
    srcs = ["x86_64_memmove/main.cc"],
    copts = ["-std=c++20"],
)

cc_binary(
    name="static_const",
    srcs = ["static_const/main.cc"],
    copts = ["-std=c++20", "-fpermissive"],
)

cc_binary(
    name="std_conditionvariable_waitfor",
    srcs = ["std_conditionvariable_waitfor/main.cc"],
    copts = ["-std=c++20"],
)